# Competency-Development

./: Assignment_1.sln  Assignment_1.vcxproj  Assignment_1.vcxproj.filters  CMakeLists.txt  README.md  build_project_VS2019.bat  run_Assignment6.bat  run_Assignment_1_to_5.bat
Assignment6/: CMakeLists.txt
Assignment6/inc/: Header_Assignment6.cpp  Header_Assignment6.h
Assignment6/src/: Source_Assignment6.cpp
inc/: Header.h
src/: Source.cpp
x64/Debug/: Assignment_1.exe.recipe  Assignment_1.ilk  Assignment_1.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Assignment_1.tlog/: Assignment_1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
